test/scc/pp/errors/045.a
045.t:1:11: error: extra tokens at end of #if directive